--- a/hCommenter.Api/hCommenter-Api.cabal
+++ b/hCommenter.Api/hCommenter-Api.cabal
@@ -37,9 +37,6 @@ license-file:       LICENSE
 -- The package author(s).
 author:             Charles Taylor
 
--- An email address to which users can send suggestions, bug reports, and patches.
-maintainer:         taylorc822@gmail.com
-
 -- A copyright notice.
 -- copyright:
 category:           Web
@@ -68,13 +65,20 @@ library
     -- other-extensions:
 
     -- Other library packages from which modules are imported.
-    build-depends:    base ^>=4.18.0.0
+    build-depends:
+        base ^>=4.18.0.0,
+        classy-prelude ^>= 1.5.0.3,
+        servant-server ^>= 0.20,
 
     -- Directories containing source files.
     hs-source-dirs:   src
 
     -- Base language which the package is written in.
     default-language: GHC2021
+
+    default-extensions:
+        NoImplicitPrelude
+        OverloadedStrings
 
 executable hCommenter-Api
     -- Import common warning flags.
