--- a/hCommenter.Api/hCommenter-Api.cabal
+++ b/hCommenter.Api/hCommenter-Api.cabal
@@ -32,7 +32,7 @@ synopsis:           Backend for the commenting system.
 license:            GPL-3.0-or-later
 
 -- The file containing the license text.
-license-file:       LICENSE
+license-file:       ../LICENSE
 
 -- The package author(s).
 author:             Charles Taylor
@@ -69,6 +69,12 @@ library
         base ^>=4.18.0.0,
         classy-prelude ^>= 1.5.0.3,
         servant-server ^>= 0.20,
+        servant-swagger ^>= 1.2,
+        swagger2 ^>= 2.8.7,
+        lens ^>= 5.2.2,
+        bytestring,
+        aeson,
+        aeson-pretty,
 
     -- Directories containing source files.
     hs-source-dirs:   src
@@ -96,6 +102,8 @@ executable hCommenter-Api
     -- Other library packages from which modules are imported.
     build-depends:
         base ^>=4.18.0.0,
+        bytestring,
+        commander-cli,
         hCommenter-Api
 
     -- Directories containing source files.
