--- a/hCommenter.Api/hCommenter-Api.cabal
+++ b/hCommenter.Api/hCommenter-Api.cabal
@@ -61,6 +61,7 @@ library
     -- Modules included in this library but not exported.
     other-modules:
         ServerTypes
+        Logging
         Handlers.Reply
         Handlers.Voting
         Handlers.Comment
@@ -74,7 +75,7 @@ library
 
     -- Other library packages from which modules are imported.
     build-depends:
-        base ^>=4.18.0.0,
+        base ^>=4.18.1.0,
         extra,
         classy-prelude,
         servant-server,
@@ -90,6 +91,7 @@ library
         effectful-core,
         effectful-th,
         effectful-plugin,
+        katip
 
     ghc-options: -fplugin=Effectful.Plugin
 
@@ -121,7 +123,7 @@ executable hCommenter-Api
 
     -- Other library packages from which modules are imported.
     build-depends:
-        base ^>=4.18.0.0,
+        base ^>=4.18.1.0,
         bytestring,
         commander-cli,
         wai,
@@ -158,5 +160,5 @@ test-suite hCommenter-Api-test
 
     -- Test dependencies.
     build-depends:
-        base ^>=4.18.0.0,
+        base ^>=4.18.1.0,
         hCommenter-Api
