feat: rearrange files and improve error handling

--- a/hCommenter.Api/hCommenter-Api.cabal
+++ b/hCommenter.Api/hCommenter-Api.cabal
@@ -62,11 +62,11 @@ library
 
     -- Modules included in this library but not exported.
     other-modules:
-        ServerTypes
         Logging
-        Handlers.Reply
-        Handlers.Voting
-        Handlers.Comment
+        Server.Reply
+        Server.Voting
+        Server.Comment
+        Server.ServerTypes
         Database.Interface
         Database.Mockserver
         Database.StorageTypes
