--- a/hCommenter.Api/hCommenter-Api.cabal
+++ b/hCommenter.Api/hCommenter-Api.cabal
@@ -87,6 +87,7 @@ library
         servant-swagger,
         swagger2,
         wai,
+        http-types,
         lens,
         bytestring,
         aeson,
