--- a/.github/workflows/api-build-and-deploy.yml
+++ b/.github/workflows/api-build-and-deploy.yml
@@ -32,7 +32,7 @@ jobs:
     environment: dev
     steps:
       - name: Checkout branch to deploy
-      - uses: actions/checkout@v3
+        uses: actions/checkout@v3
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
