--- a/.github/workflows/api-build-and-deploy.yml
+++ b/.github/workflows/api-build-and-deploy.yml
@@ -73,6 +73,9 @@ jobs:
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
+      - name: Login to Azure Container Registry
+        run: az acr login --name $RESOURCE_GROUP
+
       - name: Deploy to Azure Container App
         uses: azure/container-apps-deploy-action@v1
         with:
