--- a/.github/workflows/api-build-and-deploy.yml
+++ b/.github/workflows/api-build-and-deploy.yml
@@ -67,7 +67,7 @@ jobs:
       APP_ENVIRONMENT: dev-hcommenter
     steps:
       - name: Log in to Azure
-        uses: azure/login@v1
+        uses: azure/login@v2
         with:
           client-id: ${{ secrets.AZURE_CLIENT_ID }}
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
@@ -75,6 +75,9 @@ jobs:
 
       - name: Login to Azure Container Registry
         run: az acr login --name $RESOURCE_GROUP
+
+      - name: List images in the registry
+        run: az acr repository list --name $RESOURCE_GROUP --output table
 
       - name: Deploy to Azure Container App
         uses: azure/container-apps-deploy-action@v1
