--- a/.github/workflows/api-build-and-deploy.yml
+++ b/.github/workflows/api-build-and-deploy.yml
@@ -76,19 +76,22 @@ jobs:
       - name: Login to Azure Container Registry
         run: az acr login --name $RESOURCE_GROUP
 
-      - name: List images in the registry
-        run: az acr repository list --name $RESOURCE_GROUP --output table
-
       - name: Deploy to Azure Container App
-        uses: azure/container-apps-deploy-action@v1
-        with:
-          acrName: $RESOURCE_GROUP
-          imageToDeploy: ${{ env.CONTAINER_REGISTRY }}/${{ env.API_NAME }}:${{ github.sha }}
-          resourceGroup: $RESOURCE_GROUP
-          containerAppName: $API_NAME
-          containerAppEnvironment: ${{ env.APP_ENVIRONMENT }}
-          targetPort: $TARGET_PORT
-          location: $LOCATION
+        run: az containerapp up \
+          --name "${{ env.API_NAME }}" \
+          --image "${{ env.CONTAINER_REGISTRY }}/${{ env.API_NAME }}:${{ github.sha }}" \
+          --environment "${{ env.APP_ENVIRONMENT }}"
+
+      #  - name: Deploy to Azure Container App
+      #    uses: azure/container-apps-deploy-action@v1
+      #    with:
+      #      acrName: $RESOURCE_GROUP
+      #      imageToDeploy: ${{ env.CONTAINER_REGISTRY }}/${{ env.API_NAME }}:${{ github.sha }}
+      #      resourceGroup: $RESOURCE_GROUP
+      #      containerAppName: $API_NAME
+      #      containerAppEnvironment: ${{ env.APP_ENVIRONMENT }}
+      #      targetPort: $TARGET_PORT
+      #      location: $LOCATION
 
   #  deploy-production:
   #    steps:
