--- a/.github/workflows/api-build-and-deploy.yml
+++ b/.github/workflows/api-build-and-deploy.yml
@@ -66,6 +66,9 @@ jobs:
     env:
       APP_ENVIRONMENT: dev-hcommenter
     steps:
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
       - name: Log in to Azure
         uses: azure/login@v2
         with:
