--- a/.github/workflows/api-build-and-deploy.yml
+++ b/.github/workflows/api-build-and-deploy.yml
@@ -6,7 +6,7 @@ env:
   API_NAME: "hcommenter-api"
   FRONTEND_NAME: "hcommenter-ui"
   GITHUB_USERNAME: "CharlesEkkel"
-  CONTAINER_REGISTRY: hcommenter.azurecr.io
+  CONTAINER_REGISTRY: ghcr.io/cekkel
   IDENTITY: hcommenter-identity
   TARGET_PORT: 8080
 
@@ -37,24 +37,13 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-        # Explicitly log in so that it uses federated credentials, since Docker actions
-        # currently don't seem to support them.
-      - name: Log in to Azure
-        uses: azure/login@v2
-        with:
-          client-id: ${{ secrets.AZURE_CLIENT_ID }}
-          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-
-      - name: Login to Azure Container Registry
-        run: az acr login --name ${{ env.RESOURCE_GROUP }}
-
+      # Task automatically picks up GITHUB_TOKEN to allow pushing to registry
       - name: Build and push
         uses: docker/build-push-action@v6
         with:
           context: hCommenter.Api/
           push: true
-          tags: ${{ env.CONTAINER_REGISTRY }}/${{ env.API_NAME }}:${{ github.sha }}
+          tags: ${{ env.CONTAINER_REGISTRY }}/${{ env.API_NAME }}:${{ github.ref }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
@@ -75,15 +64,11 @@ jobs:
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
-      - name: Login to Azure Container Registry
-        run: az acr login --name ${{ env.RESOURCE_GROUP }}
-
-      # For this stage to work, the ACR must have admin access enabled in its settings
+        # Auth is not required to pull from the public github registry
       - name: Deploy to Azure Container App
         uses: azure/container-apps-deploy-action@v1
         with:
-          acrName: $RESOURCE_GROUP
-          imageToDeploy: ${{ env.CONTAINER_REGISTRY }}/${{ env.API_NAME }}:${{ github.sha }}
+          imageToDeploy: ${{ env.CONTAINER_REGISTRY }}/${{ env.API_NAME }}:${{ github.ref }}
           resourceGroup: $RESOURCE_GROUP
           containerAppName: $API_NAME
           containerAppEnvironment: ${{ env.APP_ENVIRONMENT }}
