--- a/.github/workflows/api-build-and-deploy.yml
+++ b/.github/workflows/api-build-and-deploy.yml
@@ -17,10 +17,10 @@ on:
         description: "Workflow run reason tags"
   push:
     branches:
-      - "dev"
+      - "main"
   pull_request:
     branches:
-      - "dev"
+      - "main"
 
 permissions:
   id-token: write
