--- a/.github/workflows/api-build-and-deploy.yml
+++ b/.github/workflows/api-build-and-deploy.yml
@@ -6,7 +6,8 @@ env:
   API_NAME: "hcommenter-api"
   FRONTEND_NAME: "hcommenter-ui"
   GITHUB_USERNAME: "CharlesEkkel"
-  CONTAINER_REGISTRY: ghcr.io/cekkel
+  GITHUB_ORG: cekkel
+  REGISTRY: ghcr.io
   IDENTITY: hcommenter-identity
   TARGET_PORT: 8080
 
@@ -48,12 +49,18 @@ jobs:
       # Then store the tag name as a whole for easy re-use.
       - name: Construct docker image tag
         shell: bash
-        run: echo "IMAGE_TAG=${CONTAINER_REGISTRY}/${API_NAME}:${BRANCH_NAME}" >> $GITHUB_ENV
+        run: echo "IMAGE_TAG=${REGISTRY}/${GITHUB_ORG}/${API_NAME}:${BRANCH_NAME}" >> $GITHUB_ENV
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      # Task automatically picks up GITHUB_TOKEN to allow pushing to registry
+        name: Login to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Build and push
         uses: docker/build-push-action@v6
         with:
