--- a/.github/workflows/api-build-and-deploy.yml
+++ b/.github/workflows/api-build-and-deploy.yml
@@ -32,6 +32,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     environment: Build
+    outputs:
+      image_tag: ${{ steps.construct_tag.outputs.image_tag }}
     steps:
       - name: Checkout branch to deploy
         uses: actions/checkout@v3
@@ -49,8 +51,9 @@ jobs:
 
       # Then store the tag name as a whole for easy re-use.
       - name: Construct docker image tag
+        id: construct_tag
         shell: bash
-        run: echo "IMAGE_TAG=${REGISTRY}/${GITHUB_ORG}/${API_NAME}:${BRANCH_NAME}" >> $GITHUB_ENV
+        run: echo "image_tag=${REGISTRY}/${GITHUB_ORG}/${API_NAME}:${BRANCH_NAME}" >> $GITHUB_OUTPUT
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -81,22 +84,6 @@ jobs:
     env:
       APP_ENVIRONMENT: dev-hcommenter
     steps:
-      # Store the branch name for use in tagging the build.
-      - name: Get branch name (merge)
-        if: github.event_name != 'pull_request'
-        shell: bash
-        run: echo "BRANCH_NAME=$(echo ${GITHUB_REF#refs/heads/} | tr / -)" >> $GITHUB_ENV
-
-      - name: Get branch name (pull request)
-        if: github.event_name == 'pull_request'
-        shell: bash
-        run: echo "BRANCH_NAME=$(echo ${GITHUB_HEAD_REF} | tr / -)" >> $GITHUB_ENV
-
-      # Then store the tag name as a whole for easy re-use.
-      - name: Construct docker image tag
-        shell: bash
-        run: echo "IMAGE_TAG=${REGISTRY}/${GITHUB_ORG}/${API_NAME}:${BRANCH_NAME}" >> $GITHUB_ENV
-
       - name: Log in to Azure
         uses: azure/login@v2
         with:
@@ -112,9 +99,10 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Deploy to Azure Container App
-        uses: azure/container-apps-deploy-action@v1
+        uses: azure/container-apps-deploy-action@v2
         with:
-          imageToDeploy: ${{ env.IMAGE_TAG }}
+          registryUrl: ${{ env.REGISTRY }}/${{ env.GITHUB_ORG }}
+          imageToDeploy: ${{ needs.build.outputs.image_tag }}
           resourceGroup: $RESOURCE_GROUP
           containerAppName: $API_NAME
           containerAppEnvironment: ${{ env.APP_ENVIRONMENT }}
