--- a/.github/workflows/api-build-and-deploy.yml
+++ b/.github/workflows/api-build-and-deploy.yml
@@ -91,17 +91,12 @@ jobs:
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v3
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
       - name: Deploy to Azure Container App
         uses: azure/container-apps-deploy-action@v2
         with:
-          registryUrl: ${{ env.REGISTRY }}/${{ env.GITHUB_ORG }}
+          registryUrl: ${{ env.REGISTRY }}
+          registryUsername: ${{ github.actor }}
+          registryPassword: ${{ secrets.GITHUB_TOKEN }}
           imageToDeploy: ${{ needs.build.outputs.image_tag }}
           resourceGroup: ${{ env.RESOURCE_GROUP }}
           containerAppName: ${{ env.API_NAME }}
