--- a/.github/workflows/api-build-and-deploy.yml
+++ b/.github/workflows/api-build-and-deploy.yml
@@ -6,7 +6,8 @@ env:
   API_NAME: "hcommenter-api"
   FRONTEND_NAME: "hcommenter-ui"
   GITHUB_USERNAME: "CharlesEkkel"
-  CONTAINER_REGISTRY: hcommenter.azurecr.io
+  GITHUB_ORG: cekkel
+  REGISTRY: ghcr.io
   IDENTITY: hcommenter-identity
   TARGET_PORT: 8080
 
@@ -17,44 +18,59 @@ on:
         description: "Workflow run reason tags"
   push:
     branches:
-      - "dev"
+      - "main"
   pull_request:
     branches:
-      - "dev"
+      - "main"
 
 permissions:
   id-token: write
   contents: read
+  packages: write
 
 jobs:
   build:
     runs-on: ubuntu-latest
     environment: Build
+    outputs:
+      image_tag: ${{ steps.construct_tag.outputs.image_tag }}
     steps:
       - name: Checkout branch to deploy
         uses: actions/checkout@v3
 
+      # Store the branch name for use in tagging the build.
+      - name: Get branch name (merge)
+        if: github.event_name != 'pull_request'
+        shell: bash
+        run: echo "BRANCH_NAME=$(echo ${GITHUB_REF#refs/heads/} | tr / -)" >> $GITHUB_ENV
+
+      - name: Get branch name (pull request)
+        if: github.event_name == 'pull_request'
+        shell: bash
+        run: echo "BRANCH_NAME=$(echo ${GITHUB_HEAD_REF} | tr / -)" >> $GITHUB_ENV
+
+      # Then store the tag name as a whole for easy re-use.
+      - name: Construct docker image tag
+        id: construct_tag
+        shell: bash
+        run: echo "image_tag=${REGISTRY}/${GITHUB_ORG}/${API_NAME}:${BRANCH_NAME}" >> $GITHUB_OUTPUT
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-        # Explicitly log in so that it uses federated credentials, since Docker actions
-        # currently don't seem to support them.
-      - name: Log in to Azure
-        uses: azure/login@v2
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v3
         with:
-          client-id: ${{ secrets.AZURE_CLIENT_ID }}
-          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-
-      - name: Login to Azure Container Registry
-        run: az acr login --name ${{ env.RESOURCE_GROUP }}
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build and push
         uses: docker/build-push-action@v6
         with:
           context: hCommenter.Api/
           push: true
-          tags: ${{ env.CONTAINER_REGISTRY }}/${{ env.API_NAME }}:${{ github.sha }}
+          tags: ${{ steps.construct_tag.outputs.image_tag }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
@@ -75,20 +91,18 @@ jobs:
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
-      - name: Login to Azure Container Registry
-        run: az acr login --name ${{ env.RESOURCE_GROUP }}
-
-      # For this stage to work, the ACR must have admin access enabled in its settings
       - name: Deploy to Azure Container App
-        uses: azure/container-apps-deploy-action@v1
+        uses: azure/container-apps-deploy-action@v2
         with:
-          acrName: $RESOURCE_GROUP
-          imageToDeploy: ${{ env.CONTAINER_REGISTRY }}/${{ env.API_NAME }}:${{ github.sha }}
-          resourceGroup: $RESOURCE_GROUP
-          containerAppName: $API_NAME
+          registryUrl: ${{ env.REGISTRY }}
+          registryUsername: ${{ github.actor }}
+          registryPassword: ${{ secrets.GITHUB_TOKEN }}
+          imageToDeploy: ${{ needs.build.outputs.image_tag }}
+          resourceGroup: ${{ env.RESOURCE_GROUP }}
+          containerAppName: ${{ env.API_NAME }}
           containerAppEnvironment: ${{ env.APP_ENVIRONMENT }}
-          targetPort: $TARGET_PORT
-          location: $LOCATION
+          targetPort: ${{ env.TARGET_PORT }}
+          location: ${{ env.LOCATION }}
 
   #  deploy-production:
   #    steps:
