feat: add health endpoint

--- a/hCommenter.Api/hCommenter-Api.cabal
+++ b/hCommenter.Api/hCommenter-Api.cabal
@@ -65,6 +65,7 @@ library
         Logging
         Server.Voting
         Server.Comment
+        Server.Health
         Server.ServerTypes
         Server.Swagger
         Middleware.Requests
