--- a/hCommenter.Api/hCommenter-Api.cabal
+++ b/hCommenter.Api/hCommenter-Api.cabal
@@ -143,6 +143,7 @@ test-suite spec
         http-types,
         interpolate,
         mockery,
+        servant,
         servant-client,
         temporary,
         wai,
